@startuml
abstract class ComponenteHoja {
    {static} FILAS
    {static} COLUMNAS
    {abstract} actualizar()
}

class Celda {
    -contenido: String
    -formato: String
    +mostrarContenido()
}

class Matriz {
    -celdas: Celda[][]
    +obtenerCelda()
}

class HojaCalculo {
    -matriz: Matriz
    -interfaz: InterfazUsuario
    +ejecutar()
}

ComponenteHoja <|-- Celda
ComponenteHoja <|-- Matriz
ComponenteHoja <|-- HojaCalculo
Matriz  --  Celda
HojaCalculo  --  Matriz
HojaCalculo  --  InterfazUsuario
@enduml